Work for the last two weeks in Spain, over Christmas: faster FSA-based FASTA file parser in sqio.c (STL8/p148); .tex files starting to appear for each module (STL8/p149); more consistent APIs being enforced (STL8/p150); redesign of getopts in progress; implementation of regexp.c started, for getopts.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/easel@10 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/macros.tex
+++ b/documentation/macros.tex
@@ -1,5 +1,6 @@
 % Typography.
 \newcommand{\ccode}[1]{\texttt{#1}}
+\newcommand{\prog}[1]{\texttt{#1}}
 \newcommand{\cmacro}[1]{\texttt{#1}}
 \newcommand{\cvar}[1]{\texttt{#1}}
 \newcommand{\cvartype}[1]{\texttt{#1}}
