regexp module essentially complete; 3 examples and testdriver implemented; regexp.c autodoc's; regexp.tex API documentation written.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/easel@13 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/intro.tex
+++ b/documentation/intro.tex
@@ -7,6 +7,7 @@ alphabet                   & Digitized biosequence alphabets            & easel 
 dmatrix                    & Matrix algebra                             & easel\\ 
 parse                      & File and line parsing routines             & easel\\
 random                     & Random number generator                    & easel\\
+regexp                     & Regular expression matching                & easel\\
 stack                      & Pushdown stacks                            & easel\\
 vectorops                  & Vector operations                          & easel\\\hline
   \multicolumn{3}{c}{\textbf{Derived modules}}\\
@@ -31,6 +32,7 @@ interface\_lapack          & LAPACK linear algebra library              & easel 
 \ccode{ESL\_PERMUTATION} & \cfile{dmatrix}         & Permutation matrix used in linear algebra\\
 \ccode{ESL\_FILEPARSER}  & \cfile{parse}           & Simple token-based input file parser\\
 \ccode{ESL\_RANDOMNESS}  & \cfile{random}          & Random number generator\\
+\ccode{ESL\_REGEXP}      & \cfile{regexp}          & Regular expression pattern-matching machine\\
 \ccode{ESL\_SEQFILE}     & \cfile{sqio}            & Biosequence file parser\\
 \ccode{ESL\_SQ}          & \cfile{sqio}            & DNA/RNA/protein sequence data\\
 \ccode{ESL\_STACK}       & \cfile{stack}           & Pushdown stack\\\hline
