--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -42,6 +42,12 @@
 \input{autotext/random_functions}
 
 \newpage
+\section{The regexp module: regular expression matching}
+\input{../regexp}
+\subsection{Functions in the regexp module}
+\input{autotext/regexp_functions}
+
+\newpage
 \section{The sqio (sio) module: input/output of unaligned sequence file formats}
 \input{../sqio}
 \subsection{Functions in the sqio (sio) module}
