--- a/sqio.tex
+++ b/sqio.tex
@@ -7,9 +7,7 @@ like an ANSI C \ccode{FILE}: it maintains information for an open
 sequence file while it's being read. The \ccode{ESL\_SQ} object
 contains information for a single sequence.
 
-\subsection{API}
-
-An example of using the \ccode{sqio} API: 
+\subsection{Example of using the sqio API}
 
 \begin{cchunk}
 #include <easel/easel.h>
