--- a/getopts.tex
+++ b/getopts.tex
@@ -1,12 +1,166 @@
 
+The getopts module is a more heavyweight version of command line
+parsing functions like POSIX \ccode{getopt()} and GNU's
+\ccode{getopt\_long()}. The familiar syntax of command line options is
+the same (both standard POSIX one-character options and GNU long
+options), but much of the tedious checking of the validity of option
+and command line arguments that robust C applications are normally
+obligated to do for themselves is handled automatically by the
+internals of the Easel getopts module.
 
+The Easel getopts API allows options to be set from the command line,
+environment variables, and one or more configuration files.  Option
+arguments and command line arguments may be automatically type checked
+(for instance, making sure an integer is provided when one is
+expected) and range checked (for instance, making sure that an
+argument that must be a probability in the range of 0.0-1.0 really
+is). Options may be linked into ``toggle groups'', such that setting
+one option automatically unsets others. One can specify that an option
+makes no sense unless other required options are also set, or
+conversely that an option is incompatible with one or more other
+options being set. The entire configuration state of the application
+is stored in a single object.
 
-\subsection{Long options}
+\subsection{The getopts API}
 
-For long options with arguments, two formats are accepted: either
-\ccode{--option=arg} or \ccode{--option arg}.
+The module implements a \ccode{ESL\_GETOPTS} object that holds the
+configuration state of the application, and an \ccode{ESL\_OPTIONS}
+structure that contains information about one configurable option.  An
+application defines an array of \ccode{ESL\_OPTIONS} to declare what
+options it will allow.
 
-Long options may not contain a $=$ character.
+The API defines the following functions:
+
+\begin{tabular}{ll}
+       \multicolumn{2}{c}{\textbf{creating/destroying a configuration}}\\
+\ccode{esl\_getopts\_Create()}    & Creates a new \ccode{ESL\_GETOPTS} object. \\
+\ccode{esl\_getopts\_Destroy()}   & Destroys a created \ccode{ESL\_GETOPTS} object. \\
+       \multicolumn{2}{c}{\textbf{setting a configuration}}\\
+\ccode{esl\_opt\_ProcessConfigFile()}  & Parses options out of a configuration file.\\
+\ccode{esl\_opt\_ProcessEnvironment()} & Parses options out of environment variables.\\
+\ccode{esl\_opt\_ProcessCmdline()}     & Parses options from the command line.\\
+       \multicolumn{2}{c}{\textbf{final verification of a configuration}}\\
+\ccode{esl\_opt\_VerifyConfig()}       & Tests required and incompatible opts.\\
+       \multicolumn{2}{c}{\textbf{retrieving option settings}}\\
+\ccode{esl\_opt\_GetBooleanOption()}   & Retrieve the state of a TRUE/FALSE option setting.\\
+\ccode{esl\_opt\_GetIntegerOption()}   & Retrieve an integer option argument.\\
+\ccode{esl\_opt\_GetFloatOption()}     & Retrieve a float option argument.\\
+\ccode{esl\_opt\_GetDoubleOption()}    & Retrieve a double option argument.\\
+\ccode{esl\_opt\_GetCharOption()}      & Retrieve a single-character option argument.\\
+\ccode{esl\_opt\_GetStringOption()}    & Retrieve an option argument as a string.\\
+       \multicolumn{2}{c}{\textbf{retrieving command line arguments}}\\
+\ccode{esl\_opt\_GetCmdlineArg()}      & Retrieve the next command line argument.\\
+\end{tabular}
+
+\subsection{Examples of using the getopts API}
+
+\subsection{Features of getopts}
+
+   \subsubsection{Type checking}
+   
+   \subsubsection{Range checking}
+
+   \subsubsection{Default values}
+
+   \subsubsection{Setting toggle groups of options}
+
+   \subsubsection{Specifying required or incompatible options}
+
+The \ccode{required\_opts} and \ccode{incompat\_opts} fields
+SRE STOPPED HERE.
+ of the \ccode{ESL\_OPTIONS} structure
+specified a comma-delimited list of options that may not also be on if
+this option is on. For example, \ccode{--Set this field to NULL if no
+such checking is necessary.
+
+   \subsubsection{Specifying incompatible options}
+
+The \ccode{incompat\_opts} field of the \ccode{ESL\_OPTIONS} structure
+specified a comma-delimited list of options that may not also be on if
+this option is on. For example, \ccode{--Set this field to NULL if no such checking is
+necessary.
+
+\subsection{Application configuration using getopts}
+
+   \subsubsection{Command line option syntax}
+
+Command line option syntax is standard, essentially identical to the
+syntax used by GNU programs.
+
+Options are either short or long. Short options are a single character
+preceded by a single \ccode{-}; for example, \ccode{-a}. Long options
+are preceded by two dashes, and can have any wordlength; for example,
+\ccode{--option1}.
+
+If a short option takes an argument, the argument may either be
+attached (immediately follows the option character) or unattached (a
+space between the optchar and the argument. For example, \ccode{-n5}
+and \ccode{-n 5} both specify an argument \ccode{5} to option
+\ccode{-n}.
+
+Short options can be concatenated into a string of characters;
+\ccode{-abc} is equivalent to \ccode{-a -b -c}. (Concatenation may
+only be used on the command line, not in configuration files or in
+fields of the \ccode{ESL\_OPTIONS} structure array.) Only the last
+option in such a string can take an argument, and the other options in
+the optstring must be simple on/off booleans. For example, if
+\ccode{-a} and \ccode{-b} are boolean switches, and \ccode{-W} takes a
+\ccode{<string>} argument, either \ccode{-abW foo} or \ccode{-abWfoo}
+is correct, but \ccode{-aWb foo} is not.
+
+For a long option that takes an argument, the argument can be provided
+either by \ccode{--foo arg} or \ccode{--foo=arg}.
+
+Long options may be abbreviated, if the abbreviation is unambiguous;
+for instance, \ccode{--foo} or \ccode{--foob} suffice to active an
+option \ccode{--foobar}. (Like concatenation of short options,
+abbreviation of long options is a shorthand that may only be used on
+the command line.)
+
+Long option names should contain only alphanumeric characters,
+\ccode{-}, or \ccode{\_}. They may not contain \ccode{=} or \ccode{,}
+characters, which would confuse the option argument parsers. Other
+characters should work but are not recommended.
+
+Multi-word arguments may be quoted: for example, \ccode{--hostname "my
+host"}.
+
+   \subsubsection{Configuration file format}
+
+Each line of a configuration file contains an option and an argument
+(if the option takes an argument). Blank lines are ignored.  Anything
+following a \ccode{\#} character on a line is a comment and is
+ignored. The syntax of options and arguments is stricter than on
+command lines.  Concatenation of short options is not allowed,
+abbreviation of long options is not allowed, and arguments must always
+be separated from options by whitespace. For example:
+
+\begin{cchunk}
+   # Customized configuration file for my application.
+   #
+   -a             # Turn -a on.
+   -b             # Turn -b on.
+   -W arg         # Set -W to "arg"
+\end{cchunk}
+
+   \subsubsection{Environment variables}
+
+When a non-NULL environment variable name is connected to an option,
+\ccode{esl\_opt\_ProcessEnvironment()} looks for that name in the
+environment and sets the option value accordingly. Boolean options are
+set by setting the environment variable with no argument, for
+instance (in a C-shell),
+
+\begin{cchunk}
+  % setenv FOO_DEBUGGING
+\end{cchunk}
+
+and other options are set by setting the envvar to the appropriate
+argument, for instance (in a C-shell),
+
+\begin{cchunk}
+  % setenv FOO_DEBUG_LEVEL 5
+\end{cchunk}
 
 
 
